 * Removed NearestPointAlgorithm class
 * Deprecated AbdoRackwitz|Cobyla|SQP::[gs]etLevelFunction|[gs]etLevelValue
 * Deprecated (AbdoRackwitz|Cobyla|SQP|TNC)SpecificParameters classes
 * Replaced KrigingAlgorithm::[gs]etOptimizer methods by KrigingAlgorithm::[gs]etOptimizationSolver
 * Removed ConfidenceInterval class
 * Removed draw method to CovarianceModel
 * Removed CovarianceModel::getParameters
 * Added CovarianceModel::getParameter
 * Added CovarianceModel::getParameterDescription
 * Moved CovarianceModel::setParameters to CovarianceModel::setParameter
 * Added discretizeAndFactorize method to covariance model classes
 * Added discretizeHMatrix method to covariance model classes
 * Added discretizeAndFactorizeHMatrix method to covariance model classes
 * Deprecated OptimizationSolver::setMaximumIterationsNumber in favor of OptimizationSolver::[sg]etMaximumIterationNumber
 * Moved NumericalMathFunction::[sg]etParameters to NumericalMathFunction::[sg]etParameter
 * Moved NumericalMathFunction::parametersGradient to NumericalMathFunction::parameterGradient
 * Removed NumericalMathFunction::[sg]etInitial(Evaluation|Gradient|Hessian)Implementation

=== Python module ===
 * Support infix operator for matrix multiplication (PEP465)

=== Miscellaneous ===
 * Enhanced print of samples

=== Bug fixes ===
 * #790 (AbdoRackwitz parameters)
 * #796 (Beta distribution: if sample contains Inf, freeze on getSample)
 * #798 (Error message misstyping (Gamma distribution))
 * #799 (Error message misstyping (Gumbel distribution factory))
 * #804 (no IntervalMesher documentation content)
 * #805 (Python segfault in computeSilvermanBandwidth)
 
== 1.6 release (2015-08-14) == #release-1.6

=== Library ===

==== Major changes ====
 * Improved encapsulation of hmat-oss to use H-Matrices in more classes
 * Kriging metamodelling becomes vectorial
 * Conditional normal realizations
 * Polynomial chaos performance improvements (#413)

==== New classes ====
 * VonMises, distribution