@@ -892,6 +892,12 @@ void Distribution::setParametersCollection(const NumericalPointCollection & para
   getImplementation()->setParametersCollection(parametersCollection);
 }
 
+void Distribution::setParametersCollection(const NumericalPoint & parameter)
+{
+  copyOnWrite();
+  getImplementation()->setParametersCollection(parameter);
+}
+
 /* Parameters value accessor */
 void Distribution::setParameter(const NumericalPoint & parameters)
 {
